<resources>
    <string name="app_name">Lost and Found Dog</string>
    <string name="screen_text">กดที่นี่เพื่อเข้าสู่ Application</string>
    <string name="log_in_email">อีเมล</string>
    <string name="log_in_password">รหัสผ่าน</string>
    <string name="log_in_btn_submit">เข้าสู่ระบบ</string>
    <string name="log_in_btn_to_sign_up">หากยังไม่มีบัญชีผู้ใช้ กดที่นี่เพื่อเพิ่มบัญชีผู้ใช้</string>
    <string name="log_in_alert_case1">ใส่อีเมลผิดพลาด จำนวนตัวอักษรควรมีตั้งแต่ 10 ตัวอักษรขึ้นไป</string>
    <string name="log_in_alert_case2">ใส่อีเมลผิดพลาด ควรมีตัวอักษร @ อยู่ในชื่ออีเมล</string>
    <string name="log_in_alert_case3">ใส่รหัสผ่านผิดพลาด จำนวนตัวอักษรควรมีตั้งแต่ 6 – 20 ตัวอักษร</string>
    <string name="log_in_alert_case4">เกิดข้อผิดพลาด กรุณาเช็คอีเมลหรือรหัสผ่าน</string>
    <string name="log_in_alert_case5">โปรดใส่อีเมล</string>
    <string name="log_in_alert_case6">โปรดใส่รหัสผ่าน</string>
    <string name="log_in_alert_title">แจ้งเตือน</string>
    <string name="log_in_alert_done">ตกลง</string>
    <string name="log_in_progress">เช็คการเข้าสู่ระบบ…</string>
    <string name="sign_up_username">ชื่อผู้ใช้</string>
    <string name="sign_up_email">อีเมล</string>
    <string name="sign_up_password">รหัสผ่าน</string>
    <string name="sign_up_btn_submit">เพิ่มบัญชีผู้ใช้</string>
    <string name="sign_up_alert_case1">ชื่อผู้ใช้ควรมีจำนวนตัวอักษร ตั้งแต่ 4 – 20 ตัวอักษร</string>
    <string name="sign_up_alert_case2">อีเมลควรมีจำนวนตัวอักษร ตั้งแต่ 10 ตัวอักษรขึ้นไป</string>
    <string name="sign_up_alert_case3">อีเมลควรมีตัวอักษร @ อยู่ในชื่ออีเมลด้วย</string>
    <string name="sign_up_alert_case4">รหัสผ่านควรมีจำนวนตัวอักษร ตั้งแต่ 6 – 20 ตัวอักษร</string>
    <string name="sign_up_alert_case5">เกิดข้อผิดพลาด อาจมีชื่อผู้ใช้หรือชื่ออีเมลซ้ำ กรุณาเช็คชื่อผู้ใช้และอีเมล</string>
    <string name="sign_up_alert_case6">โปรดใส่ชื่อผู้ใช้</string>
    <string name="sign_up_alert_case7">โปรดใส่อีเมล</string>
    <string name="sign_up_alert_case8">โปรดใส่รหัสผ่าน</string>
    <string name="sign_up_alert_title">แจ้งเตือน</string>
    <string name="sign_up_alert_done">ตกลง</string>
    <string name="sign_up_progress">ระบบกำลังเพิ่มบัญชีผู้ใช้…</string>
    <string name="sign_up_msg">อีเมลของท่านไม่จำเป็นต้องเป็นอีเมลที่ท่านใช้อยู่จรืง</string>
    <string name="sign_up_done">ตกลง</string>
    <string name="main_title">หน้าหลัก</string>
    <string name="main_alert_title">แจ้งเตือน</string>
    <string name="main_alert_msg">หากท่านแน่ใจว่าจะออกจาก App นี้ กดตกลง</string>
    <string name="main_alert_done">ตกลง</string>
    <string name="main_alert_cancel">ยกเลิก</string>
    <string name="main_poster_t_status">สถานะ</string>
    <string name="main_poster_status">status</string>
    <string name="main_poster_t_date">วันที่</string>
    <string name="main_poster_date">date</string>
    <string name="main_poster_location1">นำ</string>
    <string name="main_poster_location2">สถานที่</string>
    <string name="main_poster_t_district">อำเภอ</string>
    <string name="main_poster_district">district</string>
    <string name="main_poster_t_province">จังหวัด</string>
    <string name="main_poster_province">province</string>
    <string name="main_poster_t_phone">ติดต่อ</string>
    <string name="main_poster_phone">เบอร์โทร</string>
    <string name="maps_title">แผนที่</string>
    <string name="maps_alert_title">แจ้งเตือน</string>
    <string name="maps_alert_msg">หากท่านแน่ใจว่าจะออกจาก App นี้ กดตกลง</string>
    <string name="maps_alert_done">ตกลง</string>
    <string name="maps_alert_cancel">ยกเลิก</string>
    <string name="maps_alert_maps">โปรดเช็ค Wi-Fi หรือเปิด GPS หากแผนที่ไม่แสดง</string>
    <string name="popup_lost">หาย</string>
    <string name="popup_found">พบ</string>
    <string name="popup_adopt">หาบ้านใหม่</string>
    <string name="bottom_bar_menu_main">หน้าหลัก</string>
    <string name="bottom_bar_menu_maps">แผนที่</string>
    <string name="bottom_bar_menu_post">ประกาศ</string>
    <string name="bottom_bar_menu_user">เกี่ยวกับผู้ใช้</string>
    <string name="bottom_bar_menu_log_out">ออก</string>
    <string name="lost_dog_input_title">ใส่ข้อมูลสุนัขที่หาย</string>
    <string name="lost_dog_input_choose">เลือกรูปภาพ</string>
    <string name="lost_dog_input_t_dog_name">ชื่อสุนัข :</string>
    <string name="lost_dog_input_dog_name">ใส่ชื่อสุนัข</string>
    <string name="lost_dog_input_t_breed">สายพันธุ์ :</string>
    <string name="lost_dog_input_breed">เลือกสายพันธุ์ของสุนัข</string>
    <string name="lost_dog_input_breed2">* เลือกสายพันธุ์ของสุนัข</string>
    <string name="lost_dog_input_alert_breed">เลือกสายพันธุ์ของสุนัข</string>
    <string name="lost_dog_input_t_gender">เพศ :</string>
    <string name="lost_dog_input_gender">เลือกเพศของสุนัข</string>
    <string name="lost_dog_input_gender2">* เลือกเพศของสุนัข</string>
    <string name="lost_dog_input_alert_gender">เลือกเพศของสุนัข</string>
    <string name="lost_dog_input_t_age">อายุ :</string>
    <string name="lost_dog_input_age">เลือกอายุของสุนัข</string>
    <string name="lost_dog_input_age2">* เลือกอายุของสุนัข</string>
    <string name="lost_dog_input_alert_age">เลือกอายุของสุนัข</string>
    <string name="lost_dog_input_year">ปี</string>
    <string name="lost_dog_input_t_location">สถานที่หาย :</string>
    <string name="lost_dog_input_alert_location1">เลือกรูปแบบของสถานที่</string>
    <string name="lost_dog_input_location1">รูปแบบ</string>
    <string name="lost_dog_input_location1_2">* รูปแบบ</string>
    <string name="lost_dog_input_location2">ใสชื่อสถานที่</string>
    <string name="lost_dog_input_t_district">อำเภอของสถานที่หาย :</string>
    <string name="lost_dog_input_district">เลือกอำเภอ</string>
    <string name="lost_dog_input_district2">* เลือกอำเภอ</string>
    <string name="lost_dog_input_alert_district">เลือกอำเภอ</string>
    <string name="lost_dog_input_t_lost_date">วันที่หาย :</string>
    <string name="lost_dog_input_lost_date">เลือกวันที่หาย</string>
    <string name="lost_dog_input_lost_date2">* เลือกวันที่หาย</string>
    <string name="lost_dog_input_t_phone">เบอร์โทรติดต่อ :</string>
    <string name="lost_dog_input_phone">ใส่เบอร์โทรติดต่อ</string>
    <string name="lost_dog_input_t_backup_phone">เบอร์โทรติดต่อสำรอง (ถ้ามี) :</string>
    <string name="lost_dog_input_backup_phone">ใส่เบอร์โทรติดต่อสำรอง</string>
    <string name="lost_dog_input_t_facebook">Facebook (ถ้ามี) :</string>
    <string name="lost_dog_input_facebook">ใส่ facebook ติดต่อ</string>
    <string name="lost_dog_input_t_line">Line (ถ้ามี) :</string>
    <string name="lost_dog_input_line">ใส่ line ติดต่อ</string>
    <string name="lost_dog_input_t_vaccinate">ฉีดวัคซีน :</string>
    <string name="lost_dog_input_vaccinate">เลือกสถานะการฉีดวัคซีน</string>
    <string name="lost_dog_input_vaccinate2">* เลือกสถานะการฉีดวัคซีน</string>
    <string name="lost_dog_input_alert_vaccinate">เลือกสถานะการฉีดวัคซีน</string>
    <string name="lost_dog_input_t_habit">นิสัย :</string>
    <string name="lost_dog_input_habit">เลือกนิสัยของสุนัข</string>
    <string name="lost_dog_input_habit2">* เลือกนิสัยของสุนัข</string>
    <string name="lost_dog_input_alert_habit">เลือกนิสัยของสุนัข</string>
    <string name="lost_dog_input_t_collar">ปลอกคอ :</string>
    <string name="lost_dog_input_collar">เลือกปลอกคอ</string>
    <string name="lost_dog_input_collar2">* เลือกปลอกคอ</string>
    <string name="lost_dog_input_alert_collar">เลือกปลอกคอ</string>
    <string name="lost_dog_input_t_reward">เงินรางวัล (ถ้ามี) :</string>
    <string name="lost_dog_input_reward">ใส่จำนวนเงินรางวัล</string>
    <string name="lost_dog_input_alert_title">แจ้งเตือน</string>
    <string name="lost_dog_input_alert_msg">หากท่านแน่ใจในข้อมูลที่ใส่ไป กดตกลง</string>
    <string name="lost_dog_input_alert_done">ตกลง</string>
    <string name="lost_dog_input_alert_cancel">ยกเลิก</string>
    <string name="lost_dog_input_alert_case1">โปรดเลือกรูปภาพสุนัข</string>
    <string name="lost_dog_input_alert_case2">โปรดใส่ชื่อของสุนัข</string>
    <string name="lost_dog_input_alert_case3">โปรดเลือกสายพันธุ์ของสุนัข</string>
    <string name="lost_dog_input_alert_case4">โปรดเลือกสายพันธุ์ของสุนัข</string>
    <string name="lost_dog_input_alert_case5">โปรดเลือกเพศของสุนัข</string>
    <string name="lost_dog_input_alert_case6">โปรดเลือกเพศของสุนัข</string>
    <string name="lost_dog_input_alert_case7">โปรดเลือกอายุของสุนัข</string>
    <string name="lost_dog_input_alert_case8">โปรดเลือกอายุของสุนัข</string>
    <string name="lost_dog_input_alert_case9">โปรดเลือกรูปแบบของสถานที่</string>
    <string name="lost_dog_input_alert_case10">โปรดเลือกรูปแบบของสถานที่</string>
    <string name="lost_dog_input_alert_case11">โปรดใส่ชื่อสถานที่</string>
    <string name="lost_dog_input_alert_case12">โปรดเลือกอำเภอ</string>
    <string name="lost_dog_input_alert_case13">โปรดเลือกอำเภอ</string>
    <string name="lost_dog_input_alert_case14">โปรดเลือกวันที่สุนัขหาย</string>
    <string name="lost_dog_input_alert_case15">โปรดเลือกวันที่สุนัขหาย</string>
    <string name="lost_dog_input_alert_case16">โปรดใส่เบอร์โทรติดต่อ</string>
    <string name="lost_dog_input_alert_case17">โปรดเลือกสถานะการฉีดวัคซีน</string>
    <string name="lost_dog_input_alert_case18">โปรดเลือกสถานะการฉีดวัคซีน</string>
    <string name="lost_dog_input_alert_case19">โปรดเลือกนิสัยของสุนัข</string>
    <string name="lost_dog_input_alert_case20">โปรดเลือกนิสัยของสุนัข</string>
    <string name="lost_dog_input_alert_case21">โปรดเลือกปลอกคอ</string>
    <string name="lost_dog_input_alert_case22">โปรดเลือกปลอกคอ</string>
    <string name="lost_dog_input_alert_case23">ชื่อสุนัขควรมีจำนวนตัวอักษร ตั้งแต่ 1 – 10 ตัวอักษร</string>
    <string name="lost_dog_input_alert_case24">ชื่อสถานที่ควรมีจำนวนตัวอักษร ตั้งแต่ 5 – 13 ตัวอักษร</string>
    <string name="lost_dog_input_alert_case25">จำนวนตัวเลขของเบอร์ติดต่อ ควรมี 9 หรือ 10 ตัวเลข</string>
    <string name="found_dog_input_title">ใส่ข้อมูลสุนัขที่พบ</string>
    <string name="found_dog_input_choose">เลือกรูปภาพ</string>
    <string name="found_dog_input_t_breed">สายพันธุ์ :</string>
    <string name="found_dog_input_breed">เลือกสายพันธุ์สุนัข</string>
    <string name="found_dog_input_t_gender">เพศ :</string>
    <string name="found_dog_input_gender">เลือกเพศสุนัข</string>
    <string name="found_dog_input_t_location">สถานทีพบ :</string>
    <string name="found_dog_input_location1">รูปแบบ</string>
    <string name="found_dog_input_location2">ใสชื่อสถานที่</string>
    <string name="found_dog_input_t_district">อำเภอสถานที่พบ :</string>
    <string name="found_dog_input_district">เลือกอำเภอ</string>
    <string name="found_dog_input_t_found_date">วันที่พบ :</string>
    <string name="found_dog_input_found_date">เลือกวันที่พบ</string>
    <string name="found_dog_input_t_phone">เบอร์โทรติดต่อ :</string>
    <string name="found_dog_input_phone">ใส่เบอร์โทรติดต่อ</string>
    <string name="found_dog_input_t_backup_phone">เบอร์โทรติดต่อสำรอง (ถ้ามี) :</string>
    <string name="found_dog_input_backup_phone">ใส่เบอร์โทรติดต่อสำรอง</string>
    <string name="found_dog_input_t_facebook">Facebook (ถ้ามี) :</string>
    <string name="found_dog_input_facebook">ใส่ facebook ติดต่อ</string>
    <string name="found_dog_input_t_line">Line (ถ้ามี) :</string>
    <string name="found_dog_input_line">ใส่ line ติดต่อ</string>
    <string name="found_dog_input_t_collar">ปลอกคอ :</string>
    <string name="found_dog_input_collar">เลือกปลอกคอ</string>
    <string name="dialog_status_lost">สุนัขหาย</string>
    <string name="dialog_status_found">พบสุนัข</string>
    <string name="dialog_status_adopt">หาบ้านให้ใหม่</string>
    <string name="report_users">รายงาน-ผุ้ใช้-</string>
    <string name="report_all_dog">รายงาน-สุนัขทั้งหมด-</string>
    <string name="report_lost_dog">รายงาน-สุนัขที่หาย-</string>
    <string name="report_found_dog">รายงาน-สุนัขที่พบ-</string>
    <string name="report_adopt_dog">รายงาน-สุนัขทีต้องการหาบ้านใหม่-</string>
</resources>