<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuMain"
        android:icon="@drawable/ic_main"
        android:title="@string/bottom_bar_menu_main"/>

    <item
        android:id="@+id/menuMaps"
        android:icon="@drawable/ic_maps"
        android:title="@string/bottom_bar_menu_maps"/>

    <item
        android:id="@+id/menuPost"
        android:icon="@drawable/ic_post"
        android:title="@string/bottom_bar_menu_post"/>

    <item
        android:id="@+id/menuUser"
        android:icon="@drawable/ic_user"
        android:title="@string/bottom_bar_menu_user"/>

    <item
        android:id="@+id/menuLogOut"
        android:icon="@drawable/ic_log_out"
        android:title="@string/bottom_bar_menu_log_out"/>

</menu>
