<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="drusp.shimi.finalproject.FoundDogInputActivity">

    <RelativeLayout
        android:id="@+id/layout_found_dog_input_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_found_dog_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorDeepO"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/tv_found_dog_input_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:text="@string/found_dog_input_title"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </android.support.v7.widget.Toolbar>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_found_dog_input_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/sv_found_dog_input"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/sv_found_dog_input"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_navigation_check_24"
        app:backgroundTint="@color/colorLightBlue"/>

    <ScrollView
        android:id="@+id/sv_found_dog_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_found_dog_input_top"
        android:layout_margin="10dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_border"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_found_dog_input_photo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="8dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription"/>

            <Button
                android:id="@+id/btn_found_dog_input_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorDeepX"
                android:text="@string/found_dog_input_choose"
                android:textColor="@color/colorWhite"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/found_dog_input_t_breed"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn_found_dog_input_breed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="@string/found_dog_input_breed"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="italic"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/found_dog_input_t_gender"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn_found_dog_input_gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="@string/found_dog_input_gender"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="italic"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/found_dog_input_t_location"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn_found_dog_input_location1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="@string/found_dog_input_location1"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="italic"/>

                <EditText
                    android:id="@+id/et_found_dog_input_location2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:hint="@string/found_dog_input_location2"
                    android:inputType="text"
                    android:textAlignment="viewEnd"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:textStyle="bold|italic"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/found_dog_input_t_district"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn_found_dog_input_district"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="@string/found_dog_input_district"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="italic"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/found_dog_input_t_found_date"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn_found_dog_input_found_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="@string/found_dog_input_found_date"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="italic"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/found_dog_input_t_phone"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_found_dog_input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:hint="@string/found_dog_input_phone"
                    android:inputType="phone"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="bold|italic"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/found_dog_input_t_backup_phone"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_found_dog_input_backup_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:hint="@string/found_dog_input_backup_phone"
                    android:inputType="phone"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="bold|italic"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/found_dog_input_t_facebook"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_found_dog_input_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:hint="@string/found_dog_input_facebook"
                    android:inputType="text"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="bold|italic"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/found_dog_input_t_line"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_found_dog_input_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:hint="@string/found_dog_input_line"
                    android:inputType="text"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="bold|italic"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/found_dog_input_t_collar"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn_found_dog_input_collar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="@string/found_dog_input_collar"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="italic"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>